# FractalDive

./: CMakeLists.txt  LICENSE  README.md
include/: FileUtils.h  Shader.h
include/glad/: glad.h
src/: Shader.cpp  config.h  glad.c  main.cpp
src/shaders/: shader.frag  shader.vert
